--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <title>Document</title>
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/font-awesome.min.css">
-  <link href="https://fonts.googleapis.com/css?family=Saira+Condensed" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Nunito+Sans" rel="stylesheet">
+
 </head>
 <body>
   <header id="header">
@@ -32,13 +33,13 @@
     <div class="overlay"></div>
     <div class="container_table">
       <div class="container_table_cell">
-        <h2>Servus! ich bin siegmund</h2>
+        <h2>Servus! i am siegmund</h2>
 
         <div class="social_icons">
             <a target="_blank" href="https://www.facebook.com/solaire.wang"><i class="fa fa-facebook" aria-hidden="true"></i></a>
             <a target="_blank" href=""><i class="fa fa-dropbox" aria-hidden="true"></i></a>
             <a target="_blank" href="https://github.com/amceog88"><i class="fa fa-github-alt" aria-hidden="true"></i></a>
-            <a target="_blank" href=""><i class="fa fa-apple" aria-hidden="true"></i></a>
+            <a target="_blank" mailto:amceog88@gmail.com><i class="fa fa-envelope" aria-hidden="true"></i></a>
             <a target="_blank" href="https://www.linkedin.com/in/%E7%8E%8B-%E8%A8%BC%E7%8E%84-84322614b/"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
          </div>
       </div>
@@ -59,14 +60,16 @@
         <div class="col-right">
           <div class="personal-info">
             <h3>hello!</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio fugit maiores facere consequatur omnis ipsa recusandae possimus aspernatur totam illum aliquam excepturi beatae veniam Lorem ipsum dolor sit amet, consectetur.</p>
+            <p>畢業於屏東大學社會發展系</p>
+            <p>興趣是旅行及在學習中找到快樂</p>
+            <p>以成為全端工程師為目標</p>
           </div>
 
           <div class="skill">
             <ul>
-              <li>html5 and css3</li>
-              <li>responsive website design</li>
+              <li>html5 , css3 and Javascript</li>
               <li>ruby on rails</li>
+              <li>Deutsch</li>
             </ul>
           </div>
 
@@ -89,21 +92,27 @@
 
       <div class="service-items">
         <div class="service-content">
-          <i class="fa fa-html5" aria-hidden="true"></i>
+          <i class="fa fa-diamond" aria-hidden="true"></i>
           <h3>web design and development</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam, facere.</p>
+          <p>Ruby on Rails</p>
+          <p>javascript</p>
+          <p>HTML5 , CSS3</p>
         </div>
 
         <div class="service-content">
-          <i class="fa fa-css3" aria-hidden="true"></i>
-          <h3>web design and development</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam, facere.</p>
+          <i class="fa fa-users" aria-hidden="true"></i>
+          <h3>sociology</h3>
+          <p>社區總體營造、社區環境導覽、活動發想</p>
+          <p>社會調查、質性研究、撰寫在地特色之故事</p>
+          <p>老人議題、社會議題</p> 
         </div>
 
         <div class="service-content">
-          <i class="fa fa-camera-retro" aria-hidden="true"></i>
-          <h3>web design and development</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam, facere.</p>
+          <i class="fa fa-language" aria-hidden="true"></i>
+          <h3>Language</h3>
+          <p>英文 TOEIC 520</p>
+          <p>中文 華語教師時數105小時</p>
+          <p>德文</p>
         </div>
       </div>
     </div>
@@ -115,23 +124,25 @@
       <h2>resume</h2>
 
       <div class="col-horizontal clearfix">
-        <h3 class="resume-subtitle">education:</h3>
+        <h3 class="resume-subtitle">Education and Study:</h3>
 
         <div class="col-item">
-          <p class="experience-year">2001 - 2002</p>
+          <p class="experience-year">2013 - 2017</p>
           <div class="resume-detail">
-            <h4>computer science</h4>
-            <h6>google university, australia</h6>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam atque voluptates, dignissimos, in quaerat veritatis maiores fuga dolores dolorem eius.</p>
+            <h4>social development</h4>
+            <h6>national pingtung university, taiwan</h6>
+            <p>話劇社秘書・駁二演出・系學會企劃部長</p>
+            <p>華語師資課程・華語助理老師</p>
+            <p>柏林暑期社工課程・德文課助教・特色大學計畫</p>
           </div>
         </div>
 
         <div class="col-item">
-          <p class="experience-year">2002 - 2003</p>
+          <p class="experience-year">2017 - 2018</p>
           <div class="resume-detail">
-            <h4>google collage</h4>
-            <h6>stanford university, BD</h6>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam atque voluptates, dignissimos, in quaerat veritatis maiores fuga dolores dolorem eius.</p>
+            <h4>Alpha Camp</h4>
+            <h6>front and back end</h6>
+            <p>從小我就很喜歡接觸電腦的東西，但很可惜的是大學無緣就讀相關系所，畢業之後得以如願以償</p>
           </div>
         </div>
       </div>
@@ -140,82 +151,30 @@
         <h3 class="resume-subtitle">experience:</h3>
 
         <div class="col-item">
-          <p class="experience-year">2004 - 2005</p>
+          <p class="experience-year">2015 - 2017</p>
           <div class="resume-detail">
-            <h4>themeforest company, malibug</h4>
-            <h6>front end developer</h6>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam atque voluptates, dignissimos, in quaerat veritatis maiores fuga dolores dolorem eius.</p>
+            <h4>national pingtung university, taiwan</h4>
+            <h6>working student</h6>
+            <p>燈音控場地管理工讀生</p>
+            <p>德文助教</p>
+            <p>特色大學計畫工讀生</p>
+            <p>華語文助理老師</p>
           </div>
         </div>
 
         <div class="col-item">
-          <p class="experience-year">2005 - 2007</p>
+          <p class="experience-year">2015</p>
           <div class="resume-detail">
-            <h4>google company, australia</h4>
-            <h6>wordpress developer</h6>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam atque voluptates, dignissimos, in quaerat veritatis maiores fuga dolores dolorem eius.</p>
+            <h4>Tainan, Taiwan</h4>
+            <h6>tainan station</h6>
+            <p>大二實習</p>
+            <p>售票房・行李房・詢問處・剪票口</p>
           </div>
         </div>
       </div>
     </div>
   </section>
 
-  <!-- Quote -->
-  <section class="quotes">
-    <div class="overlay"></div>
-    <div class="container">
-      <div class="quote-inner">
-        <h3>Let's work together!</h3>
-        <p>I am available for freelance projects</p>
-        <a href="#">get quotes</a>
-      </div>
-    </div>
-  </section>
-
-  <!-- lastest work-->
-  <section class="works">
-    <div class="container">
-      <h2>latest work</h2>
-
-      <div class="work-items clearfix">
-        <div class="col-work">
-          <a href="image/portfolio/work-1.png">
-            <img src="image/portfolio/work-1.png" alt="portfolio-1">
-          </a>
-        </div>
-
-        <div class="col-work">
-          <a href="image/portfolio/work-2.png">
-            <img src="image/portfolio/work-2.png" alt="portfolio-2">
-          </a>
-        </div>
-
-        <div class="col-work">
-          <a href="image/portfolio/work-3.png">
-            <img src="image/portfolio/work-3.png" alt="portfolio-3">
-          </a>
-        </div>
-
-        <div class="col-work">
-          <a href="image/portfolio/work-4.png">
-            <img src="image/portfolio/work-4.png" alt="portfolio-4">
-          </a>
-        </div>
-
-        <div class="col-work">
-          <a href="image/portfolio/work-5.png">
-            <img src="image/portfolio/work-5.png" alt="portfolio-5">
-          </a>
-        </div>
-
-        <div class="col-work">
-          <a href="image/portfolio/work-6.png">
-            <img src="image/portfolio/work-6.png" alt="portfolio-6">
-          </a>
-        </div>
-      </div>
-    </div>
-  </section>
 
   <!-- Contact -->
   <section class="contact"  id="contact">
@@ -223,7 +182,7 @@
       <h2>get in touch</h2>
 
       <div class="contact-form">
-        <form action="">
+        <form Action="MailTo:amceog88@gmail.com" Enctype="Text/Plain">
           <div class="form-input">
             <input type="text" name="name" class="form-style" placeholder="input your name" required>
           </div>
@@ -255,7 +214,7 @@
               <a target="_blank" href="https://www.facebook.com/solaire.wang"><i class="fa fa-facebook" aria-hidden="true"></i></a>
               <a target="_blank" href=""><i class="fa fa-dropbox" aria-hidden="true"></i></a>
               <a target="_blank" href="https://github.com/amceog88"><i class="fa fa-github-alt" aria-hidden="true"></i></a>
-              <a target="_blank" href=""><i class="fa fa-apple" aria-hidden="true"></i></a>
+              <a target="_blank" mailto:amceog88@gmail.com><i class="fa fa-envelope" aria-hidden="true"></i></a>
               <a target="_blank" href="https://www.linkedin.com/in/%E7%8E%8B-%E8%A8%BC%E7%8E%84-84322614b/"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
             </li>
           </ul>
